# opensocks

./: .env.example  .gitignore  PLAN.md  PROJECT_INPUTS.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy-test-single-server.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  access_keys.py  client.py  health.py  nodes.py  users.py
backend/app/core/: config.py
backend/app/db/: __init__.py  bootstrap.py  crud.py  models.py  session.py
backend/app/schemas/: access_key.py  node.py  user.py
backend/tests/: conftest.py  test_access_keys.py  test_client_bootstrap.py  test_health.py  test_nodes.py  test_user_configs.py  test_users.py
bot/: .env.example  config_bot.py  opensocks-config-bot.service.example
deploy/: .env.server.example  client-gateway.conf  docker-compose.multi-user.yml  docker-compose.server.yml  docker-compose.shadowsocks.yml  docker-compose.ss2022-test.yml
docs/: DEPLOYMENT_STRATEGY.md  INFRA_GUIDE.md  RU_PROVIDER_SHORTLIST.md  SERVER_ACCESS_AND_SECURITY.md  SERVER_SIZING.md
infra/: README.md  servers.example.env
macos/OpenSocksMac/: Package.swift  README.md
scripts/: bootstrap_ubuntu_server.sh  deploy_multi_user.sh  deploy_remote.sh  deploy_ss2022_test.sh  generate_ss2022_key.sh  issue_multi_user.sh  issue_ss2022_user.sh  issue_ss_config.sh  list_multi_configs.sh  list_multi_users.sh  list_ss2022_users.sh  list_ss_configs.sh  list_ss_users.sh  print_multi_user_config.sh  print_ss2022_config.sh  print_ss_config.sh  remove_multi_user.sh  remove_ss2022_user.sh  remove_ss_user.sh
(+11 files in other folders)
