[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensocks-api"
version = "0.1.0"
description = "Control plane API for OpenSocks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.8,<3.0",
    "sqlalchemy>=2.0.39,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "UP"]

[tool.setuptools.packages.find]
include = ["app*"]
